--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,3 @@
-plugins:
-  - jekyll-relative-links
-relative_links:
-  enabled: true
-  collections: true
-include:
-  - CONTRIBUTING.md
-  - README.md
-  - LICENSE.md
-  - COPYING.md
-  - CODE_OF_CONDUCT.md
-  - CONTRIBUTING.md
-  - ISSUE_TEMPLATE.md
-  - PULL_REQUEST_TEMPLATE.md
+theme: jekyll-theme-minimal
+title: CS 241 - Spring 2022
+description: Bookmark this to keep an eye on project updates
